unpackaged/main/default/objects/AuthorizationFormConsent/fields/Consent_Consent_Giver_Individual_Only__c.field-meta.xml
<CustomField>
    <fullName>Consent_Consent_Giver_Individual_Only__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Consent giver (Individual Only) is a hidden lookup field to allow Individual Object to have a related list for Authorization Form Consent</description>
    <label>Consent Giver (Individual Only)</label>
    <referenceTo>Individual</referenceTo>
    <relationshipLabel>Authorization Form Consents</relationshipLabel>
    <relationshipName>Authorization_Form_Consents</relationshipName>
    <type>Lookup</type>
</CustomField>