unpackaged/main/default/objects/AuthorizationFormConsent/fields/ConsentCapturedSourceType__c.field-meta.xml
<CustomField>
    <fullName>ConsentCapturedSourceType__c</fullName>
    <description>Standard field is a restricted Picklist and cannot be repurposed here. Hence a new Consent Captured Source Type field is created</description>
    <label>Consent Captured Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>InStore</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>InStoreSelf</fullName>
            </value>
            <value>
                <fullName>Unspecified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>