unpackaged/main/default/objects/AuthorizationFormConsent/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>To identify AU/NZ consent records</description>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AU</fullName>
            </value>
            <value>
                <fullName>NZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>