unpackaged/main/default/objects/AuthorizationFormConsent/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Store Location where the consent was provided &quot;2010&quot; Location from COS</description>
    <label>Store Location Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>