unpackaged/main/default/objects/AuthorizationFormConsent/fields/Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Message_Id__c</fullName>
    <description>The Message Id is an external ID concatination of [Entity.Consent.DataUsePurpose.Code]|[Entity.Capture.DateTime]|[Entity.Capture.Source]|[Entity.Capture.SourceModule]|[Entity.Capture.SourceReference]|[Entity.Capture.LocationCode] with seperator character &quot;|&quot; from the Consent Inbound Payload</description>
    <externalId>true</externalId>
    <label>Message Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>