unpackaged/main/default/objects/AuthorizationFormConsent/fields/Pp_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Pp_Account_Number__c</fullName>
    <description>The PowerPass Account Number related to the Authorization Form Consent</description>
    <label>PowerPass Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>