unpackaged/main/default/objects/AuthorizationFormConsent/fields/Pp_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Pp_Card_Number__c</fullName>
    <description>Contains PowerPass Card Number</description>
    <label>PowerPass Card Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>