unpackaged/main/default/objects/AuthorizationFormConsent/fields/SourceCustomerId__c.field-meta.xml
<CustomField>
    <fullName>SourceCustomerId__c</fullName>
    <description>To reference customer number from hire shop HS_CUSTOMERS.CUSTOMER_ID</description>
    <label>Source Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>