unpackaged/main/default/objects/AuthorizationFormConsent/fields/SourceReferenceId__c.field-meta.xml
<CustomField>
    <fullName>SourceReferenceId__c</fullName>
    <description>To reference the booking if needed

Consent API field from COS SourceID = HS_BOOKINGS.BOOKING_ID</description>
    <label>Created By Source Reference Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>