unpackaged/main/default/objects/AuthorizationFormConsent/fields/SourceSystemModule__c.field-meta.xml
<CustomField>
    <fullName>SourceSystemModule__c</fullName>
    <description>Consent API field SourceSystemModule = &quot;Hireshop&quot;</description>
    <label>Created By Source System Module</label>
    <length>255</length>
    <type>Text</type>
</CustomField>