unpackaged/main/default/objects/AuthorizationFormConsent/fields/Tm_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Tm_Card_Number__c</fullName>
    <description>Team Member Card number related to the Authorization form consent</description>
    <label>Team Member Card</label>
    <length>20</length>
    <type>Text</type>
</CustomField>