unpackaged/main/default/objects/AuthorizationFormConsent/fields/Tm_Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>Tm_Employee_Number__c</fullName>
    <description>Team Member Employee Number related to the Authorization Form Consent</description>
    <label>Team Member Employee Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>